syntax = "proto3";
package voxel.common.v1;

import "google/protobuf/timestamp.proto";

message Pcd {
  string format = 1;      // "pcd", "ply", "xyz", etc.
  bytes  payload = 2;
  string units = 3;       // "meters"
}

message Mesh {
  string format = 1;      // "ply", "glb", "gltf"
  bytes  payload = 2;     // or omitted if using uri
  string uri = 3;         // optional: signed URL / storage key for large assets
  string units = 4;       // "meters"
}

// Metadata about a guru persona that downstream services can render or query
message GuruProfile {
  string guru_id = 1;
  string display_name = 2;
  string biography = 3;
  repeated string tags = 4;
  string default_point_cloud_variant = 5; // e.g. "neutral"
  google.protobuf.Timestamp updated_at = 6;
}

// Summaries for the point-cloud variants that exist for a guru
message PointCloudMetadata {
  string guru_id = 1;
  string variant = 2;        // "neutral", "smile", etc.
  string description = 3;    // free-form human readable summary
  bool has_mesh = 4;         // true if a mesh accompanies this point cloud
  google.protobuf.Timestamp updated_at = 5;
}

// Standard ARPAbet-ish set; customize to your TTS/aligner
enum Viseme {
  VISEME_UNSPECIFIED = 0;
  VISEME_PP = 1;   // p/b/m
  VISEME_FV = 2;   // f/v
  VISEME_TH = 3;   // th
  VISEME_DNT = 4;  // d/t/n/l
  VISEME_KG = 5;   // k/g/ng
  VISEME_CHJSH = 6;// ch/j/sh/zh
  VISEME_SZ = 7;   // s/z
  VISEME_AA = 8;   // a
  VISEME_EE = 9;   // e
  VISEME_IH = 10;  // i
  VISEME_OH = 11;  // o
  VISEME_UH = 12;  // u
  VISEME_R = 13;   // r
  VISEME_WQ = 14;  // w/oo
  VISEME_MBG = 15; // mouth closed (rest)
}

message PhonemeMark {
  string phoneme = 1;            // e.g., "AA", "EH", "TH"
  int64  start_ms = 2;           // relative to utterance start
  int64  end_ms = 3;
  Viseme viseme = 4;             // mapped viseme for display
}

message WordPiece {
  string text = 1;
  int64  start_ms = 2;
  int64  end_ms = 3;
}

message LipSync {
  repeated PhonemeMark phonemes = 1;
  repeated WordPiece   words = 2;
}

// Citations returned with dialogue responses for traceable RAG answers
message ContextReference {
  string context_id = 1;
  string title = 2;
  string snippet = 3;
  string uri = 4;
  double score = 5;            // similarity/confidence score
}

message Error {
  string code = 1;    // e.g., "INVALID_ARGUMENT"
  string message = 2;
}
